@@ -1,0 +1,19 @@
+DROP TABLE T1;
+CREATE TABLE T1(key STRING, value STRING) STORED AS TEXTFILE;
+LOAD DATA LOCAL INPATH '../data/files/kv1.txt' INTO TABLE T1;
+LOAD DATA LOCAL INPATH '../data/files/kv2.txt' INTO TABLE T1;
+
+DROP TABLE T2;
+CREATE TABLE T2(key STRING, value STRING);
+
+EXPLAIN 
+INSERT OVERWRITE TABLE T2 SELECT a.key, a.value from T1 a LIMIT 20;
+
+
+INSERT OVERWRITE TABLE T2 SELECT a.key, a.value from T1 a LIMIT 20;
+
+SELECT * FROM T2;
+
+
+DROP TABLE T1;
+DROP TABLE T2;
