@@ -21,12 +21,24 @@ STAGE PLANS:
                       expr: value
                       type: string
                 Limit
-                  File Output Operator
-                    table:
-                        input format: org.apache.hadoop.mapred.TextInputFormat
-                        output format: org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat
-                        serde: org.apache.hadoop.hive.serde2.MetadataTypedColumnsetSerDe
-                        name: dest1
+                  Reduce Output Operator
+                    sort order: 
+                    tag: -1
+                    value expressions:
+                          expr: 0
+                          type: string
+                          expr: 1
+                          type: string
+      # Reducers: 1
+      Reduce Operator Tree:
+        Extract
+          Limit
+            File Output Operator
+              table:
+                  input format: org.apache.hadoop.mapred.TextInputFormat
+                  output format: org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat
+                  serde: org.apache.hadoop.hive.serde2.MetadataTypedColumnsetSerDe
+                  name: dest1
 
   Stage: Stage-0
     Move Operator
