@@ -3,7 +3,9 @@ ABSTRACT SYNTAX TREE:
 
 STAGE DEPENDENCIES:
   Stage-1 is a root stage
-  Stage-0 depends on stages: Stage-1
+  Stage-0 depends on stages: Stage-1, Stage-2
+  Stage-2 depends on stages: Stage-1
+  Stage-0 depends on stages: Stage-1, Stage-2
 
 STAGE PLANS:
   Stage: Stage-1
@@ -21,12 +23,14 @@ STAGE PLANS:
                       expr: value
                       type: string
                 Limit
-                  File Output Operator
-                    table:
-                        input format: org.apache.hadoop.mapred.TextInputFormat
-                        output format: org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat
-                        serde: org.apache.hadoop.hive.serde2.MetadataTypedColumnsetSerDe
-                        name: dest1
+                  Reduce Output Operator
+                    sort order: 
+                    tag: -1
+                    value expressions:
+                          expr: 0
+                          type: string
+                          expr: 1
+                          type: string
             Filter Operator
               predicate:
                   expr: (key < 100)
@@ -40,10 +44,19 @@ STAGE PLANS:
                 Limit
                   File Output Operator
                     table:
-                        input format: org.apache.hadoop.mapred.TextInputFormat
-                        output format: org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat
-                        serde: org.apache.hadoop.hive.serde2.MetadataTypedColumnsetSerDe
-                        name: dest2
+                        input format: org.apache.hadoop.mapred.SequenceFileInputFormat
+                        output format: org.apache.hadoop.mapred.SequenceFileOutputFormat
+                        name: binary_table
+      # Reducers: 1
+      Reduce Operator Tree:
+        Extract
+          Limit
+            File Output Operator
+              table:
+                  input format: org.apache.hadoop.mapred.TextInputFormat
+                  output format: org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat
+                  serde: org.apache.hadoop.hive.serde2.MetadataTypedColumnsetSerDe
+                  name: dest1
 
   Stage: Stage-0
     Move Operator
@@ -60,6 +73,29 @@ STAGE PLANS:
                 output format: org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat
                 serde: org.apache.hadoop.hive.serde2.MetadataTypedColumnsetSerDe
                 name: dest2
+
+  Stage: Stage-2
+    Map Reduce
+      Alias -> Map Operator Tree:
+        /tmp/hive-njain/153468547/613626322.10002 
+          Reduce Output Operator
+            sort order: 
+            tag: -1
+            value expressions:
+                  expr: 0
+                  type: string
+                  expr: 1
+                  type: string
+      # Reducers: 1
+      Reduce Operator Tree:
+        Extract
+          Limit
+            File Output Operator
+              table:
+                  input format: org.apache.hadoop.mapred.TextInputFormat
+                  output format: org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat
+                  serde: org.apache.hadoop.hive.serde2.MetadataTypedColumnsetSerDe
+                  name: dest2
 
 
 86	val_86
